--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                 </li>
                 <li>
                   <label for="message">Message</label>
-                  <textarea id="message" name="message" required="required"></texterea>
+                  <textarea id="message" name="message" required="required"></textarea>
                 </li>
               </ul>
               <input type="submit" name="submit">
