--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <a href="portfolio.html">Portfolio</a>
                 <a href="contact.html">Contact</a>
             </nav>
-
+    </div>
     </header>
     <div id="main-container" class="container">
         <section class="main-container">
